# buzhidaojiaosha

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  zeabur.json
app/: ai_audit.py  alert_rules.py  alerts.py  bot.py  config.py  db.py  fixed_keywords.py  group_configurator.py  ignore_words.py  listener.py  main.py  matcher.py  models.py  monitor_groups.py  poller.py  redis_queue.py  repositories.py  response_detector.py  session_bootstrap.py  special_accounts.py  staff_identity.py  telegram_utils.py  work_mode.py  worker.py
scripts/: add_monitor_rule.py  export_migration_summary.py  listener_login.py  remote_add_rule.py  remote_audit_elk_yesterday.py  remote_configure_groups.py  remote_deploy.py  remote_diagnose_message.py  remote_fetch_message_context.py  remote_probe.py  remote_probe_timeout_queue.py  remote_query_staff.py  remote_test_webhook.py  remote_verify_keywords.py  remote_verify_mini_keywords.py  remote_verify_monitoring_logic.py  remote_verify_recipient_display.py  remote_verify_stats.py  remote_verify_tasks.py  remote_worker_probe.py  set_telegram_menu.py  set_telegram_webhook.py
tests/: conftest.py  test_admin_routes.py  test_ai_audit.py  test_alert_rules.py  test_alerts.py  test_automation.py  test_bot.py  test_config.py  test_ignore_words.py  test_listener.py  test_matcher.py  test_miniapp_routes.py  test_poller.py  test_redis_queue.py  test_repositories.py  test_response_detector.py  test_session_bootstrap.py  test_staff_identity.py  test_telegram_utils.py  test_telegram_webhook.py  test_work_mode.py  (+2 more)
(+32 files in other folders)
