[project]
name = "telegram-alert-bot"
version = "0.1.0"
description = "Telegram keyword timeout alert bot"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7,<4",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "redis>=5,<6",
  "telethon>=1.40,<2",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
